# TextPolish

./: .gitattributes  .gitignore  BUILD.md  README.md  RELEASE.md  __init__.py  build.py  build_windows.bat  main.py  pyproject.toml  requirements.txt  要求.md
.github/workflows/: build-and-release.yml
config/: README.md  app_config.json
scripts/: README.md  release.py  test-build.py
src/textpolish/: __init__.py  app.py  config.py
src/textpolish/core/: __init__.py  html_generator.py  text_processor.py
src/textpolish/ui/: __init__.py  config_interface.py  main_interface.py  main_window.py
src/textpolish/utils/: __init__.py  clipboard.py  icon.py
