[project]
name = "textpolish"
version = "2.0.1"
description = "Gemini文本格式修复工具 - 用于处理Gemini AI回答文本复制到Word后的格式混乱问题"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyperclip>=1.8.2",
    "pyqt6-fluent-widgets>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "pillow>=11.3.0",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
